Ciclo de partida
falta pulir mucho y hasta checar la conexion lan, pero abri 2 proyectos y ya funciona entre 2 jugadores

faltan pendientes como: finalizar partida (ambos al lobby), pantalla cargando.... (para cuando uno falte de poner barcos) y demas